--- a/index.html
+++ b/index.html
@@ -94,14 +94,18 @@
      </nav> 
      <section id="about"> 
       <h1>About me</h1> 
-      <p>My name is sabarinathan. 20 years old I live in pattukkottai and have a family of four. I study in if degree from khadir mohideen college,adirampattinam. BHARATHIDASAN UNIVERSITY,Trichy.My hobbies are learning to programming language and my long-team goal is to achieve a higher position in the any company that is all about me Thank you.</p> 
+      <p>My name is sabarinathan. 20 years old I live in pattukkottai and have a family of four. 
+          I study in if degree from khadir mohideen college,adirampattinam.
+           BHARATHIDASAN UNIVERSITY,Trichy.
+           My hobbies are learning to programming language and my long-team goal is to achieve a higher position in the any company that is all about me Thank you.</p> 
      </section> 
      <section id="Education"> 
          <div class="section-content">
-             <h2>BCA</h2>
+            <h2>Education</h2>
+             <p>BCA</p>
              <p>BHARATHIDASAN UNIVERSITY TRICHY</p>
          </div>
-         </section>>
+     </section>
      <section id="projects"> 
       <h2>Projects</h2> 
       <div class="project"> 
@@ -127,6 +131,7 @@
                  <h2>Resume</h2>
                  <a href="https://mail.google.com/mail/u/0?ui=2&ik=b4368a2f52&attid=0.1&permmsgid=msg-a:r-3395900703413288014&th=18b61fdc445bc797&view=att&disp=inline&realattid=18b61fd96aa7b09b3d1" class="download-button">Downloas cv</a>
              </div>
+            </center>
      </section>
      <footer> 
       <p>© 2023 SABARINATHAN</p> 
