--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <img src="sabarinathan.jpg" height="300px;" width="300px;" styles="border-radius 50%;" alt=""> 
          </center>
       <center>
-        <h1>SABARINATHAN</h1> 
+        <h1>SABARINATHAN K</h1> 
         <h2>STUDENT</h2>
       </center>
       <ul> 
